# chat2api

./: .gitignore  Dockerfile  Dockerfile.aipro  Dockerfile.popai  Dockerfile.wrtnai  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: Dockerfile  aipro.py  popai.py  wrtnai.py
src/chat2api/: __init__.py  api.py  chat.py  util.py
